--- a/skeleton/example.html
+++ b/skeleton/example.html
@@ -96,7 +96,7 @@
 
   <section id="reviews">
     <h2>Reviews</h2>
-      <form id="review-form" action="/reviews" method="post">
+      <!-- <form id="review-form" action="/reviews" method="post">
         <label for="name">Name</label>
         <input id="name" type="text" name="name">
 
@@ -121,7 +121,7 @@
           <option value="Professional Chef">Professional Chef</option>
         </select>
 
-        <label>Review
+        <label>Review -->
           <textarea id="review" name="review" cols="30" rows="10"></textarea>
         </label>
 
